namespace.yaml
#创建独立命名空间namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-blog
